--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\HP\AppData\Local\Temp\testng-eclipse--795835255\testng-customsuite.xml</span>
+                    <span>C:\Users\HP\AppData\Local\Temp\testng-eclipse--1015595749\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="locators.Xpath" class="method navigator-link" hash-for-method="linkXpath">linkXpath</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="pomWithPageFactory.Pf_LoginTest" class="method navigator-link" hash-for-method="XpathLoop">XpathLoop</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">locators.Xpath</span>
+              <span class="class-name">pomWithPageFactory.Pf_LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="linkXpath">
-                  </a> <!-- linkXpath -->
-                  <span class="method-name">linkXpath</span>
+                  <a name="XpathLoop">
+                  </a> <!-- XpathLoop -->
+                  <span class="method-name">XpathLoop</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\HP\AppData\Local\Temp\testng-eclipse--795835255\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\HP\AppData\Local\Temp\testng-eclipse--1015595749\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;locators.Xpath&quot;&gt;
+      &lt;class name=&quot;pomWithPageFactory.Pf_LoginTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;linkXpath&quot;/&gt;
+          &lt;include name=&quot;XpathLoop&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- locators.Xpath --&gt;
+      &lt;/class&gt; &lt;!-- pomWithPageFactory.Pf_LoginTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'linkXpath')
-data.setCell(0, 2, 'locators.Xpath')
-data.setCell(0, 3, 704);
+data.setCell(0, 1, 'XpathLoop')
+data.setCell(0, 2, 'pomWithPageFactory.Pf_LoginTest')
+data.setCell(0, 3, 244);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 704 ms</span>
+              <span class="suite-total-time">Total running time: 244 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,17 +213,13 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">3 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">locators.Xpath</span>
+              <span class="ignored-class-name">pomWithPageFactory.Pf_LoginTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">LoginXpath</span>
-                <br/>
-                <span class="ignored-method-name">gettextXpath</span>
-                <br/>
-                <span class="ignored-method-name">HeadingXpathLoop</span>
+                <span class="ignored-method-name">loginTest</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -235,18 +231,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">locators.Xpath</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">pomWithPageFactory.Pf_LoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">openBankOfAmerica</span>
+                <span class="method-name">openApp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">linkXpath</span>
-                <span class="method-start">14157 ms</span>
+                <span class="method-name">XpathLoop</span>
+                <span class="method-start">11474 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">closeBankOfAmerica</span>
-                <span class="method-start">14873 ms</span>
+                <span class="method-name">closeApp</span>
+                <span class="method-start">11725 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
